[IM-0001] | (*) AbstractFactory - Corrigido erro ortográfico;                            (*) AbstractFactory - Ajustado nome do formulário;

--- a/AbstractFactory.dproj
+++ b/AbstractFactory.dproj
@@ -99,9 +99,13 @@
             <MainSource>MainSource</MainSource>
         </DelphiCompile>
         <DCCReference Include="usMain.pas">
-            <Form>Form1</Form>
+            <Form>frmConcentrador</Form>
             <FormType>dfm</FormType>
         </DCCReference>
+        <DCCReference Include="Pattern.AbstractProduct.pas"/>
+        <DCCReference Include="Pattern.AbstractFactory.pas"/>
+        <DCCReference Include="Pattern.ConcreteFactory.pas"/>
+        <DCCReference Include="Pattern.Product.Concentrador.pas"/>
         <BuildConfiguration Include="Base">
             <Key>Base</Key>
         </BuildConfiguration>
